<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <Button
            android:id="@+id/btn_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/calc"/>
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/edit_rule"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="请在下方输入商品数量，默认为1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_cola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cola"
            android:textColorHint="@color/bg"
            android:textColor="@color/black"
            android:maxLength="5"
            android:inputType="number"/>
        <EditText
            android:id="@+id/edit_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ball"
            android:textColorHint="@color/bg"
            android:textColor="@color/black"
            android:maxLength="5"
            android:inputType="number"/>
        <EditText
            android:id="@+id/edit_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apple"
            android:textColorHint="@color/bg"
            android:textColor="@color/black"
            android:maxLength="5"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:textColor="@color/black"/>
</LinearLayout>
